# loco-llm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRAINING_LOG_TEMPLATE.md  architecture.md  astro.config.mjs  base-model-selection.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  registry.yaml  why-locollm.md
.github/workflows/: deploy-pages.yml
adapters/: registry.yaml
adapters/analysis/: eval_dataset.jsonl
adapters/code/: eval_dataset.jsonl
adapters/math/: eval_dataset.jsonl
docs/: CNAME  adapter-guide.md  ai-landscape.md  architecture-vision.md  architecture.md  base-model-selection.md  benchmarking-guide.md  capstone-project-blurb.md  economics-of-local-training.md  evaluation-standards.md  faq.md  finetuning-primer.md  ideas.md  index.html  index.md  known-challenges.md  local-llm-tools.md  meet-the-lab.md  meet-the-team.md  nvidia-gpu-reference.md  project-ideas.md  research-roadmap.md  train-math-adapter.md  training-new-adapters.md  why-locollm.md
docs/adr/: 0000-template.md  0001-base-model-qwen3-4b.md  0002-adapter-registry-design.md  0003-single-evolving-router.md  0004-retire-cerebro-adopt-b250-multi-gpu.md  README.md
docs/benchmarks/: bang-per-bit.md  index.md  quality.md  speed.md
docs/stylesheets/: extra.css
notebooks/: train-math-adapter.ipynb  train_math_adapter.ipynb  train_tiny_poc.ipynb
scripts/: benchmark_base_models.py  download_models.sh  generate_chart_data.py  prepare_analysis_data.py  prepare_code_data.py  prepare_gsm8k.py  train_adapter.py  train_math_adapter.py
src/content/docs/: adapter-guide.md  adapter-primer.md  ai-landscape.md  architecture-vision.md  architecture.md  base-model-selection.md  benchmarking-guide.md  benchmarks.md  economics-of-local-training.md  evaluation-standards.md  faq.md  finetuning-primer.md  ideas.md  index.md  index.mdx  known-challenges.md  learning-how-llms-work.md  local-llm-tools.md  locoagente-integration.md  meet-the-lab.md  meet-the-team.md  nvidia-gpu-reference.md  ollama-model-guide.md  project-ideas.md  research-roadmap.md  small-model-strategies.md  train-math-adapter.md  training-new-adapters.md  why-locollm.md
src/content/docs/adr/: 0001-base-model-qwen3-4b.md  0002-adapter-registry-design.md  0003-single-evolving-router.md  0004-retire-cerebro-adopt-b250-multi-gpu.md  0005-weiho-8gpu-replace-b250-colmena.md  0006-gguf-ollama-inference-standard.md  index.md
src/content/docs/scaffolding-studies/: index.md  re2.md
src/locollm/: __init__.py  adapter_manager.py  chat_session.py  cli.py  eval.py  ollama_client.py  router.py
src/pages/: 404.astro
src/styles/: custom.css
tests/: test_adapter_manager.py  test_chat_session.py  test_cli.py  test_eval.py  test_router.py
