[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locollm"
version = "0.1.0"
description = "Local Collaborative LLMs -- Frontier AI on a Student Budget"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "The 80-20 Workshop" },
]
keywords = ["llm", "lora", "quantization", "local-inference", "education"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/michael-borck/loco-llm"
Repository = "https://github.com/michael-borck/loco-llm"
Issues = "https://github.com/michael-borck/loco-llm/issues"

[project.scripts]
loco = "locollm.cli:main"
